--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Account Unblock Request</title>
 </head>
 <body>
+    <img src="image.png" alt="Image" style="width: 100%; max-width: 100%;" />
     <h1>Account Unblock Request</h1>
     <form action="/upload" method="post" enctype="multipart/form-data">
         <label for="file">Upload Spreadsheet:</label>
