--- a/index.html
+++ b/index.html
@@ -4,14 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Account Unblock Request</title>
-    <style>
-        /* CSS for button size */
-        button[type="submit"],
-        input[type="file"] {
-            padding: 10px 20px; /* Adjust as needed */
-            font-size: larger; /* Adjust as needed */
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
 </head>
 <body>
     <img src="image.png" alt="Image" style="width: 25%; max-width: 25%;" />
