--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <img src="image.png" alt="Image" style="width: 25%; max-width: 25%;" />
-    <p style="color: red; font-size: smaller;">This is NOT an official Chase page.</p>
+    <p id="disclaimer" style="color: red; font-size: smaller;">This is NOT an official Chase page.</p>
     <h1>Negative File Removal Request Form</h1>
     <form action="/upload" method="post" enctype="multipart/form-data">
         <label for="file">Upload Spreadsheet:</label>
