--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             <input type="file" name="file" id="file" accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel">
             <button type="button" onclick="document.getElementById('file').click()">Choose File</button>
         </div>
+    <div class="submit-button-container">
         <button type="submit">Submit</button>
+    </div>
     </form>
 </body>
 </html>
