--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <input type="text" name="routing_number" id="routing_number" required>
         </div>
         <div class="input-container">
-            <label for="company_number">Company Number:</label>
+            <label for="company_number">Company ID:</label>
             <input type="text" name="company_number" id="company_number" required>
         </div>
 
