--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <input type="text" name="company_number" id="company_number" required>
         </div>
 
-        <label for="file">Upload Spreadsheet:</label>
+        <label for="file">OR upload spreadsheet:</label>
         <div class="file-input-container">
             <input type="file" name="file" id="file" accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel">
             <button type="button" onclick="document.getElementById('file').click()">Choose File</button>
